--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
             apps remotely in the mountains of Vineyard,Utah.</h1>
           <div class="bio_text">
             <p> Prior to joining the software community, I worked as a Chartered Accountant and a member of
-              the ICAG. <br>Its been a dream to become a software developer hence the change in career path
+              the ICAG. Its been a dream to become a software developer hence the change in career path
               and I currently work as a freelancer.</p>
           </div>
           <div class="bio_text">
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="d-flex align-items-center justify-content-start hist-r">
+        <div class="d-flex align-items-center justify-content-start hist-r" style="margin-top:10%">
           <div class="flex-shrink-0">
             <img class="capp-icon" src="/images/nucampd.png" alt="...">
           </div>
@@ -205,7 +205,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 read">
-          <div class="card card-bg" style="width: 17rem;">
+          <div class="card card-bg">
             <img src="/images/read1.jpeg" class="card-img-top" alt="System Analysis and Design">
             <div class="card-body">
               <p class="card-text">System Analysis & Design.</p>
@@ -214,7 +214,7 @@
           </div>
         </div>
         <div class="col-md-3 read">
-          <div class="card card-bg" style="width: 17rem;">
+          <div class="card card-bg">
             <img src="/images/read2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Programming Logic & Design.</p>
@@ -223,7 +223,7 @@
           </div>
         </div>
         <div class="col-md-3 read">
-          <div class="card card-bg" style="width: 17rem;">
+          <div class="card card-bg">
             <img src="/images/read3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Algorithms.</p>
@@ -232,7 +232,7 @@
           </div>
         </div>
         <div class="col-md-3 read">
-          <div class="card card-bg" style="width: 17rem;">
+          <div class="card card-bg">
             <img src="/images/read4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Clean Code.</p>
@@ -241,7 +241,7 @@
           </div>
         </div>
         <div class="col-md-3 read">
-          <div class="card card-bg" style="width: 17rem;">
+          <div class="card card-bg">
             <img src="/images/read5.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">React & React Native.</p>
@@ -250,7 +250,7 @@
           </div>
         </div>
         <div class="col-md-3 read">
-          <div class="card card-bg" style="width: 17rem;">
+          <div class="card card-bg">
             <img src="/images/read6.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Superintelligence</p>
@@ -259,7 +259,7 @@
           </div>
         </div>
       </div>
-      <div class="container next-prev" style="color: white;">
+      <div class="container next-prev">
         <div class="row">
           <div class="d-flex justify-content-center col-md-6 col-sm-6 prev">
             <div class="">
