--- a/classics.html
+++ b/classics.html
@@ -50,6 +50,7 @@
     }
   </style>
 </head>
+
 <body class="index-body">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -107,28 +108,27 @@
         <div class="d-flex justify-content-center">
           <div class="mean-title text-center">Classics.</div>
         </div>
-        <div class="d-flex justify-content-center">
-          <div class="mean-sub text-center">A behind the scenes snapshot of my journey into software development,
-            source of inspiration, questions about the future of software & random life updates
-            captured in HTTP status codes.
-          </div>
-        </div>
-      </div>
-      <div class="lightbox">
-        <div class="row">
-          <div class="">
-            <img src="images/collage.png" data-mdb-img="images/collage.png" alt="Lightbox image 1" class="w-100 mb-2 mb-md-4 shadow-1-strong rounded collage" />
-          </div>
-        </div>
       </div>
     </div>
-    <div class="container cls-main">
+    <div class="d-flex justify-content-center">
+      <div class="mean-sub text-center text-sm-start">A behind the scenes snapshot of my journey into software development,
+        source of inspiration, questions about the future of software & random life updates
+        captured in HTTP status codes.
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+          <img src="images/collage.png" class="collage" />
+      </div>
+    </div>
+    <div class="container">
       <div class="row">
         <div class="cls-103">
           <div class="flex-shrink-0">
             <img class="icon-cls" src="/images/begin.jpeg" align="left" alt="...">
-            <h1 class="cls-title">103 Early Hints.</h1>
-            <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
+            <h1 class="cls-title">103 Early Hints.
+              <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
+            </h1>
             <p class="text-cls">I guess every journey has a beginning right ! Mine started with quest of converting
               scanned financial statements saved in PDF format to Word format in order to perform a word search for my lecturer's PhD thesis.
               I naively did a simple copy and paste. Psssttt, like you guessed, it didn't work.</p>
@@ -142,13 +142,15 @@
         <div class="cls-103">
           <div class="flex-shrink-0">
             <img class="icon-cls" src="/images/knowledge.jpg" align="left" alt="...">
-            <h1 class="cls-title">428 Precondition Required.</h1>
-            <p class="date-cls"><i class="fa fa-calendar"></i>August 06, 2018</p>
+            <h1 class="cls-title">428 Precondition Required.
+              <p class="date-cls"><i class="fa fa-calendar"></i>August 06, 2018</p>
+            </h1>
+
             <p class="text-cls">Five years went by like the wind. However, I was focused on my Accounting
               profession and ended up working in an IT company, Accounts Department. Then I signed up for a Python
               course that never got started. However, researching into the preconditions required to study software development
               revealed the following;
-            <ul class="text-cls">
+            <ul class="texts-cls">
               <li class="text-sub-title">Self-Reliance</li>
               <p>Keeping in mind that the only way to eat an elephant is a bite at a time, pick something and start.
                 There will be times where you want to give up, or have someone else show you how to do something,
@@ -202,8 +204,10 @@
         <div class="cls-103">
           <div class="flex-shrink-0">
             <img class="icon-cls" src="/images/detour.png" align="left" alt="...">
-            <h1 class="cls-title">308 Permanent Redirect.</h1>
+            <h1 class="cls-title">308 Permanent Redirect.
             <p class="date-cls"><i class="fa fa-calendar"></i>December 25, 2019</p>
+            </h1>
+
             <p class="text-cls">Enough was enough. I resolved to leave it all behind and set myself on the path that I have always wanted to journey.</p>
             <p class="text-cls">This time I need to commit everything in order to attain some sort of self satisfaction.</p>
             <p class="text-cls">Hence I redirected my career path permanently to study software development.</p>
@@ -395,7 +399,7 @@
             <p class="works-text"><a class="u_none" href="/about">About.</a></p>
           </div>
         </div>
-        <div class="d-flex justify-content-center col-md-4 colsm-6 next">
+        <div class="d-flex justify-content-center col-md-4 col-sm-6 next">
           <div class="">
             <p class="next-text">NEXT</p>
             <p class="classics-text"><a class="u_none" href="/">Works.</a></p>
