--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </header>
   <section class="c-hero">
     <div class="row c-hero__box">
-      <div class="column">
+      <div class="column hero-title">
         <h1 class="c-hero__title justify-center">Hi. I’m Prince.</h1>
         <h1 class="c-hero__title justify-center">A Web Developer.</h1>
         <div class="c-hero-sub col-lg-8">I develop both Mobile and Web Applications that help solve daily business and social challenges.
@@ -111,28 +111,28 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-              <img class="d-block w-100" src="images/html.png" alt="HTML 5" />
+              <img class="d-block" src="images/html.png" alt="HTML 5" />
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <img class="d-block w-100" src="images/css.png" alt="CSS 3" />
+              <img class="d-block" src="images/css.png" alt="CSS 3" />
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/javascript.png" alt="Javascript" />
+              <img class="d-block" src="images/javascript.png" alt="Javascript" />
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/react.jpeg" alt="React" />
+              <img class="d-block" src="images/react.jpeg" alt="React" />
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/reactnative.png" alt="React Native" />
+              <img class="d-block" src="images/reactnative.png" alt="React Native" />
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/node_js.png" alt="Node js" />
+              <img class="d-block" src="images/node_js.png" alt="Node js" />
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/express_js.png" alt="Express JS" />
+              <img class="d-block" src="images/express_js.png" alt="Express JS" />
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/mongodb.png" alt="Mongo DB" />
+              <img class="d-block" src="images/mongodb.png" alt="Mongo DB" />
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -300,13 +300,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4" id="contactme">
+        <div class="col-md-3" id="contactme">
           <a class="contact" href="#telephone"><i class="fa fa-address-book fa-lg"></i>Contacts :</a>
         </div>
         <div id="telephone" class="col-md-4 phone">
           <a class="Nphone" href="tel:+233246783336"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
-        <div class="col-md-4 mail">
+        <div class="col-md-5 mail">
           <a class="Nvlope" href="mailto:works@prince.segbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
         </div>
       </div>
