--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="ftext text-center">Freelance ! rope me in. I like to learn something new!</div>
         </div>
         <div class="d-flex justify-content-center">
-          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="#" class="lspan">let's chat</a></span></div>
+          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@prince.segbefia.com" class="lspan">let's chat</a></span></div>
         </div>
       </div>
       <div class="row">
