Milstone1 First update

--- a/classics.html
+++ b/classics.html
@@ -117,7 +117,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="card" style="background-color:black;">
           <img src="images/collage.png" class="collage" />
       </div>
     </div>
