Milestone 1 Second Update

--- a/classics.html
+++ b/classics.html
@@ -415,7 +415,7 @@
           <div class="ftext text-center">Freelance ! rope me in. I like to learn something new!</div>
         </div>
         <div class="d-flex justify-content-center">
-          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@prince.segbefia.com" class="lspan">let's chat</a></span></div>
+          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
         </div>
       </div>
       <div class="row">
@@ -426,7 +426,7 @@
           <a class="Nphone" href="tel:+233246783336"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
         <div class="col-md-4 mail">
-          <a class="Nvlope" href="mailto:works@prince.segbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
+          <a class="Nvlope" href="mailto:works@princesegbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
         </div>
       </div>
     </div>
