--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     }
   </style>
 </head>
+
 <body class="index-body">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -108,40 +109,50 @@
       </div>
       <div class="col-md-6">
         <p class="slide_text">Familiar Technologies</p>
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+          </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-              <img class="d-block" src="images/html.png" alt="HTML 5" />
+              <img class="d-block w-100" src="images/html.png" alt="HTML 5" />
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <img class="d-block" src="images/css.png" alt="CSS 3" />
+              <img class="d-block w-100" src="images/css.png" alt="CSS 3" />
             </div>
             <div class="carousel-item">
-              <img class="d-block" src="images/javascript.png" alt="Javascript" />
+              <img class="d-block w-100" src="images/javascript.png" alt="Javascript" />
             </div>
             <div class="carousel-item">
-              <img class="d-block" src="images/react.jpeg" alt="React" />
+              <img class="d-block w-100" src="images/react.jpeg" alt="React" />
             </div>
             <div class="carousel-item">
-              <img class="d-block" src="images/reactnative.png" alt="React Native" />
+              <img class="d-block w-100" src="images/reactnative.png" alt="React Native" />
             </div>
             <div class="carousel-item">
-              <img class="d-block" src="images/node_js.png" alt="Node js" />
+              <img class="d-block w-100" src="images/node_js.png" alt="Node js" />
             </div>
             <div class="carousel-item">
-              <img class="d-block" src="images/express_js.png" alt="Express JS" />
+              <img class="d-block w-100" src="images/express_js.png" alt="Express JS" />
             </div>
             <div class="carousel-item">
-              <img class="d-block" src="images/mongodb.png" alt="Mongo DB" />
+              <img class="d-block w-100" src="images/mongodb.png" alt="Mongo DB" />
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-            <span class="sr-only">Previous</span>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-            <span class="sr-only">Next</span>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
           </button>
         </div>
       </div>
@@ -296,7 +307,7 @@
           <div class="ftext text-center">Freelance ! rope me in. I like to learn something new!</div>
         </div>
         <div class="d-flex justify-content-center">
-          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@prince.segbefia.com" class="lspan">let's chat</a></span></div>
+          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
         </div>
       </div>
       <div class="row">
@@ -307,7 +318,7 @@
           <a class="Nphone" href="tel:+233246783336"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
         <div class="col-md-5 mail">
-          <a class="Nvlope" href="mailto:works@prince.segbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
+          <a class="Nvlope" href="mailto:works@princesegbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
         </div>
       </div>
     </div>
