Milestone 1 Third Update

--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-              <img class="d-block w-100" src="images/html.png" alt="HTML 5" />
+              <img class="d-block w-100" src="images/html.jpg" alt="HTML 5" />
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <img class="d-block w-100" src="images/css.png" alt="CSS 3" />
+              <img class="d-block w-100" src="images/css.jpg" alt="CSS 3" />
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/javascript.png" alt="Javascript" />
+              <img class="d-block w-100" src="images/javascript.jpg" alt="Javascript" />
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/react.jpeg" alt="React" />
+              <img class="d-block w-100" src="images/react.png" alt="React" />
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="images/reactnative.png" alt="React Native" />
@@ -303,8 +303,8 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="d-flex justify-content-center">
-          <div class="ftext text-center">Freelance ! rope me in. I like to learn something new!</div>
+        <div class="">
+          <div class="ftext">Freelance ! rope me in. I like to learn something new!</div>
         </div>
         <div class="d-flex justify-content-center">
           <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
@@ -315,7 +315,7 @@
           <a class="contact" href="#telephone"><i class="fa fa-address-book fa-lg"></i>Contacts :</a>
         </div>
         <div id="telephone" class="col-md-4 phone">
-          <a class="Nphone" href="tel:+233246783336"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
+          <a class="Nphone" href="tel:9294233552"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
         <div class="col-md-5 mail">
           <a class="Nvlope" href="mailto:works@princesegbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
