--- a/about.html
+++ b/about.html
@@ -279,8 +279,8 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="d-flex justify-content-center">
-          <div class="ftext text-center">Freelance ! rope me in. I like to learn something new!</div>
+        <div class="">
+          <div class="ftext">Freelance ! rope me in. I like to learn something new!</div>
         </div>
         <div class="d-flex justify-content-center">
           <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
@@ -291,7 +291,7 @@
           <a class="contact" href="#telephone"><i class="fa fa-address-book fa-lg"></i>Contacts :</a>
         </div>
         <div id="telephone" class="col-md-4 phone">
-          <a class="Nphone" href="tel:+233246783336"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
+          <a class="Nphone" href="tel:9294233552"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
         <div class="col-md-4 mail">
           <a class="Nvlope" href="mailto:works@princesegbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
