--- a/classics.html
+++ b/classics.html
@@ -12,16 +12,21 @@
 
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <!-- Additional CSS must be placed after Bootstrap CSS -->
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -55,13 +60,15 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Works
               </a>
               <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
@@ -111,14 +118,15 @@
       </div>
     </div>
     <div class="d-flex justify-content-center">
-      <div class="mean-sub text-center text-sm-start">A behind the scenes snapshot of my journey into software development,
-        source of inspiration, questions about the future of software & random life updates
+      <div class="mean-sub text-center text-sm-start">A behind the scenes snapshot of my journey into software
+        development.
+        The source of inspiration, questions about the future of software & random life updates
         captured in HTTP status codes.
       </div>
     </div>
     <div class="container">
       <div class="card" style="background-color:black;">
-          <img src="images/collage.png" class="collage" />
+        <img src="images/collage.png" class="collage" />
       </div>
     </div>
     <div class="container">
@@ -130,11 +138,15 @@
               <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
             </h1>
             <p class="text-cls">I guess every journey has a beginning right ! Mine started with quest of converting
-              scanned financial statements saved in PDF format to Word format in order to perform a word search for my lecturer's PhD thesis.
+              scanned financial statements saved in PDF format to Word format in order to perform a word search for my
+              lecturer's PhD thesis.
               I naively did a simple copy and paste. Psssttt, like you guessed, it didn't work.</p>
-            <p class="text-cls">I spent several hours trying to impress my lecturer and that made me discover a world of coding approaches I didn't understand.
-              Being curious I tried to understand the code however after a quick scan at the codes; this is a waste of my time I concluded.</p>
-            <p class="text-cls">I won't tell you how it ended but the fire to study software development ignited that very moment.</p>
+            <p class="text-cls">I spent several hours trying to impress my lecturer and that made me discover a world of
+              coding approaches I didn't understand.
+              Being curious I tried to understand the code however after a quick scan at the codes; this is a waste of
+              my time I concluded.</p>
+            <p class="text-cls">I won't tell you how it ended but the fire to study software development ignited that
+              very moment.</p>
           </div>
         </div>
       </div>
@@ -148,7 +160,8 @@
 
             <p class="text-cls">Five years went by like the wind. However, I was focused on my Accounting
               profession and ended up working in an IT company, Accounts Department. Then I signed up for a Python
-              course that never got started. However, researching into the preconditions required to study software development
+              course that never got started. However, researching into the preconditions required to study software
+              development
               revealed the following;
             <ul class="texts-cls">
               <li class="text-sub-title">Self-Reliance</li>
@@ -189,13 +202,17 @@
                 memory and more second nature to recall important commands.</p>
               <li class="text-sub-title">Scientific Method</li>
               <p>The problems/challenges of coding can seem infinite, daunting, and impossible to begin.
-                That’s where using the scientific method to break down obstacles and projects themselves can become extremely helpful.</p>
+                That’s where using the scientific method to break down obstacles and projects themselves can become
+                extremely helpful.</p>
               <li class="text-sub-title">Communication and Empathy</li>
-              <p>Perhaps the most overlooked aspect of programming has little to do with the manual and mental labor of writing code.
-                Coding is an insular world that effects our lives more each day. Coders need to be able to work with, and explain what
+              <p>Perhaps the most overlooked aspect of programming has little to do with the manual and mental labor of
+                writing code.
+                Coding is an insular world that effects our lives more each day. Coders need to be able to work with,
+                and explain what
                 they do to employers, clients, consumers and coworkers that don’t understand what they do.</p>
             </ul>
-            <a class="text-clss" href="https://www.computersciencezone.org/10-skills-necessary-coding/">computersciencezone.org</a>
+            <a class="text-clss"
+              href="https://www.computersciencezone.org/10-skills-necessary-coding/">computersciencezone.org</a>
             </p>
           </div>
         </div>
@@ -205,11 +222,13 @@
           <div class="flex-shrink-0">
             <img class="icon-cls" src="/images/detour.png" align="left" alt="...">
             <h1 class="cls-title">308 Permanent Redirect.
-            <p class="date-cls"><i class="fa fa-calendar"></i>December 25, 2019</p>
+              <p class="date-cls"><i class="fa fa-calendar"></i>December 25, 2019</p>
             </h1>
 
-            <p class="text-cls">Enough was enough. I resolved to leave it all behind and set myself on the path that I have always wanted to journey.</p>
-            <p class="text-cls">This time I need to commit everything in order to attain some sort of self satisfaction.</p>
+            <p class="text-cls">Enough was enough. I resolved to leave it all behind and set myself on the path that I
+              have always wanted to journey.</p>
+            <p class="text-cls">This time I need to commit everything in order to attain some sort of self satisfaction.
+            </p>
             <p class="text-cls">Hence I redirected my career path permanently to study software development.</p>
           </div>
         </div>
@@ -220,10 +239,12 @@
             <img class="icon-cls" src="/images/choices.png" align="left" alt="...">
             <h1 class="cls-title">300 Multiple Choices</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>April 18, 2020</p>
-            <p class="text-cls">Several options available in the software development space made it difficult to arrive at a decision on which option to choose.
+            <p class="text-cls">Several options available in the software development space made it difficult to arrive
+              at a decision on which option to choose.
               Should I do a self-study? Or attend a bootcamp? In both situations, which language do I focus on?</p>
             <p class="text-cls">Friends in the industry kept giving conflicting information.
-              Start with Python someone said. Another insisted on Javascript. Web applications will help you land a job faster. Others insisted, Mobile development is
+              Start with Python someone said. Another insisted on Javascript. Web applications will help you land a job
+              faster. Others insisted, Mobile development is
               the way to go, it is the future.</p>
             <p class="text-cls">Just like every other profession, the software space if full of multiple choices. </p>
           </div>
@@ -235,12 +256,15 @@
             <img class="icon-cls" src="/images/switch.png" align="left" alt="...">
             <h1 class="cls-title">101 Switching Protocols.</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>May 27, 2020</p>
-            <p class="text-cls">Finally a decision was made to go with self-study. Bought a course on Udemy and started Full Stack Web Devlopment.
+            <p class="text-cls">Finally a decision was made to go with self-study. Bought a course on Udemy and started
+              Full Stack Web Devlopment.
               3 months into the course momentum began to slow and I hadn't covered much.</p>
             <p class="text-cls">Work shedules didnt make it any easier. Didn't have anybody to work with,
-              no course mates to share ideas with like I was used to in the traditional way of learning. I was told it was a lonely path to thread upon
+              no course mates to share ideas with like I was used to in the traditional way of learning. I was told it
+              was a lonely path to thread upon
               but I did envisage it was going to be this lonely.</p>
-            <p class="text-cls">I asked myself, is this not all I have ever wanted? What has changed? Did I switch protocols too early?</p>
+            <p class="text-cls">I asked myself, is this not all I have ever wanted? What has changed? Did I switch
+              protocols too early?</p>
           </div>
         </div>
       </div>
@@ -250,7 +274,8 @@
             <img class="icon-cls" src="/images/upgrade.jpg" align="left" alt="...">
             <h1 class="cls-title">426 Upgrade Required.</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>November 5, 2020</p>
-            <p class="text-cls">It's time to upgrade since the server has refused to perform my request using the current protocols. I upgraded by signing up
+            <p class="text-cls">It's time to upgrade since the server has refused to perform my request using the
+              current protocols. I upgraded by signing up
               to Nucamp Coding Bootcamp. This turned out to be the best upgrade ever.</p>
             <p class="text-cls">At last I was back on track to fulfill my life's long dream.</p>
           </div>
@@ -262,7 +287,8 @@
             <img class="icon-cls" src="/images/music.png" align="left" alt="...">
             <h1 class="cls-title">415 Unsupported Media Type </h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>December 25, 2020</p>
-            <p class="text-cls">To prevent boredom and loneliness during my coding journey, music has been my greatest source of inspiration.
+            <p class="text-cls">To prevent boredom and loneliness during my coding journey, music has been my greatest
+              source of inspiration.
               Most of my study hours were made less stressfull by these raggae legends; Lucky Dube & Bob Marley.</p>
             <audio id="audio" tabindex="0" controls=""></audio>
             <div id="ss_elem_list">
@@ -373,8 +399,10 @@
             <img class="icon-cls" src="/images/ok.jpg" align="left" alt="...">
             <h1 class="cls-title">200 OK</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>May 1, 2021</p>
-            <p class="text-cls">OK, now we are here and you are able to access this page because I have successfully completed
-              the Bootcamp, which is the preliminary stage of becoming a guru in software development. Its been a wonderful journey and it all began with a step. </p>
+            <p class="text-cls">OK, now we are here and you are able to access this page because I have successfully
+              completed
+              the Bootcamp, which is the preliminary stage of becoming a guru in software development. Its been a
+              wonderful journey and it all began with a step. </p>
           </div>
         </div>
       </div>
@@ -384,9 +412,12 @@
             <img class="icon-cls" src="/images/continue.jpg" align="left" alt="...">
             <h1 class="cls-title">100 Continue</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>May 7, 2021</p>
-            <p class="text-cls">To continue, I sometimes wonder what the future holds in software development for me. Do I focus on Front End or Back End, Web or Mobile?
-              For now, I am a Full Stack Developer but I don't want to be a Jack of all trades and a Master of none, hence I need to specialize.</p>
-            <p class="text-cls">I've been told that a programmer's direction is usually highly dependent on his work environment. Nonetheless, I hope to find some clarity as I learn more.</p>
+            <p class="text-cls">To continue, I sometimes wonder what the future holds in software development for me. Do
+              I focus on Front End or Back End, Web or Mobile?
+              For now, I am a Full Stack Developer but I don't want to be a Jack of all trades and a Master of none,
+              hence I need to specialize.</p>
+            <p class="text-cls">I've been told that a programmer's direction is usually highly dependent on his work
+              environment. Nonetheless, I hope to find some clarity as I learn more.</p>
           </div>
         </div>
       </div>
@@ -412,10 +443,11 @@
     <div class="container">
       <div class="row">
         <div class="">
-          <div class="ftext">Freelance ! rope me in. I like to learn something new!</div>
+          <div class="ftext">Freelancing? Count me in! I love to learn new thing.</div>
         </div>
         <div class="d-flex justify-content-center">
-          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
+          <div class="ltext text-center">Lets make history and break boundries. Send me a message and <span><a
+                href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
         </div>
       </div>
       <div class="row">
@@ -426,20 +458,24 @@
           <a class="Nphone" href="tel:9294233552"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
         <div class="col-md-4 mail">
-          <a class="Nvlope" href="mailto:works@princesegbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
+          <a class="Nvlope" href="mailto:works@princesegbefia.com"><i
+              class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
         </div>
       </div>
     </div>
   </footer>
 
   <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+    integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <!-- <script src="audio.js"></script> -->
   <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
       init();
 
       function init() {
@@ -450,13 +486,13 @@
         var len = tracks.length - 1;
         audio[0].volume = .10;
         audio[0].play();
-        playlist.on('click', 'a', function(e) {
+        playlist.on('click', 'a', function (e) {
           e.preventDefault();
           link = $(this);
           current = link.parent().index();
           run(link, audio[0]);
         });
-        audio[0].addEventListener('ended', function(e) {
+        audio[0].addEventListener('ended', function (e) {
           current++;
           if (current == len) {
             current = 0;
