--- a/about.html
+++ b/about.html
@@ -12,16 +12,21 @@
 
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <!-- Additional CSS must be placed after Bootstrap CSS -->
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -50,17 +55,20 @@
     }
   </style>
 </head>
+
 <body class="index-body">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Works
               </a>
               <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
@@ -108,16 +116,19 @@
           <img class="bio-image" src="images/edem-gray.png" alt="Edem image">
         </div>
         <div class="col-md-6 bio">
-          <h1 class="biotext">I'm Prince, a Full Stack Web Developer. I am enthused about developing web and mobile
+          <h1 class="biotext">I'm Prince Segbefia, a Full Stack Web Developer. I am excited about developing web and
+            mobile
             apps remotely in the mountains of Vineyard,Utah.</h1>
           <div class="bio_text">
             <p> Prior to joining the software community, I worked as a Chartered Accountant and a member of
-              the ICAG. Its been a dream to become a software developer hence the change in career path
-              and I currently work as a freelancer.</p>
+              the ICAG. It's been my dream to become a software developer hence the change in career path. I currently
+              work as frelancer </p>
           </div>
           <div class="bio_text">
-            <p>I spend most of my time perfecting existing knowledge whiles familiarizing with new trends.<br> Coming from Africa, I
-              also enjoy guiding and helping the youth to take on coding as a path to poverty alleviation and success.</p>
+            <p>I spend most of my time perfecting existing knowledge while familiarizing myself with new trends.<br>
+              Coming from Africa, I
+              also enjoy guiding and helping youth to take on coding as a path to alleviating poverty and achieving
+              success.</p>
           </div>
           <div class="bio_text">
             <p>When I am not coding I like to go to the movie theatre, watch basketball games and play 8 Ball Pool. </p>
@@ -280,10 +291,11 @@
     <div class="container">
       <div class="row">
         <div class="">
-          <div class="ftext">Freelance ! rope me in. I like to learn something new!</div>
+          <div class="ftext">Freelancing? Count me in! I love to learn new thing.</div>
         </div>
         <div class="d-flex justify-content-center">
-          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
+          <div class="ltext text-center">Lets make history and break boundries. Send me a message and <span><a
+                href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
         </div>
       </div>
       <div class="row">
@@ -294,15 +306,19 @@
           <a class="Nphone" href="tel:9294233552"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
         <div class="col-md-4 mail">
-          <a class="Nvlope" href="mailto:works@princesegbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
+          <a class="Nvlope" href="mailto:works@princesegbefia.com"><i
+              class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
         </div>
       </div>
     </div>
   </footer>
   <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+    integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 </html>
