--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
 
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <!-- Additional CSS must be placed after Bootstrap CSS -->
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -52,13 +57,15 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Works
               </a>
               <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
@@ -104,21 +111,30 @@
       <div class="column hero-title">
         <h1 class="c-hero__title justify-center">Hi. I’m Prince.</h1>
         <h1 class="c-hero__title justify-center">A Web Developer.</h1>
-        <div class="c-hero-sub col-lg-8">I develop both Mobile and Web Applications that help solve daily business and social challenges.
+        <div class="c-hero-sub col-lg-8">I develop both Mobile and Web Applications that help solve daily business and
+          social challenges.
           My goal is to develop end-to-end applications that challenge the status quo.</div>
       </div>
       <div class="col-md-6">
         <p class="slide_text">Familiar Technologies</p>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+              aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+              aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+              aria-label="Slide 7"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+              aria-label="Slide 8"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
@@ -146,11 +162,13 @@
               <img class="d-block w-100" src="images/mongodb.png" alt="Mongo DB" />
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
@@ -159,13 +177,14 @@
   </section>
   <main>
     <div class="web_app text-center">Web apps</div>
-    <p class="hint text-center" style="color:#aaaaaa;margin-top:-20px;">Hint: All works are in progress</p>
+    <p class="hint text-center" style="color:#aaaaaa;margin-top:-20px;">Note: All works are in progress</p>
     <div class="album py-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div id="worknpay" class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img"
+                aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>Work&Pay</title>
                 <rect width="100%" height="100%" fill="white" />
                 <a href="/">
@@ -174,7 +193,8 @@
               </svg>
               <div class="card-body">
                 <p>Work&Pay</p>
-                <p class="card-text">A vehicle hire-purchase company where potential drivers are connected to vehicle owners.</p>
+                <p class="card-text">A vehicle hire-purchase company where potential drivers are connected to vehicle
+                  owners.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="/"><button type="button" class="btn btn-sm btn-outline-secondary">View Project</button></a>
@@ -185,7 +205,8 @@
           </div>
           <div id="bookme" class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Work&Pay Ltd website" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img"
+                aria-label="Placeholder: Work&Pay Ltd website" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>BookMe</title>
                 <rect width="100%" height="100%" fill="white" />
                 <a href="/">
@@ -194,7 +215,8 @@
               </svg>
               <div class="card-body">
                 <p>BookMe</p>
-                <p class="card-text">An appointment scheduling application to enhance time management and service delivery in organisations.</p>
+                <p class="card-text">An appointment scheduling application to enhance time management and service
+                  delivery in organisations.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" href="/" class="btn btn-sm btn-outline-secondary">View Project</button>
@@ -205,7 +227,8 @@
           </div>
           <div id="kardiocare" class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Yodem Forex App" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img"
+                aria-label="Placeholder: Yodem Forex App" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>KardioCare</title>
                 <rect width="100%" height="100%" fill="white" />
                 <a href="/">
@@ -214,7 +237,8 @@
               </svg>
               <div class="card-body">
                 <p>KardioCare</p>
-                <p class="card-text">A health monitoring application to assist doctors and pharmacist check patients' vitals remotely.</p>
+                <p class="card-text">A health monitoring application to assist doctors and pharmacist check patients'
+                  vitals remotely.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" href="/" class="btn btn-sm btn-outline-secondary">View Project</button>
@@ -225,7 +249,8 @@
           </div>
           <div id="elib" class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img"
+                aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>Elib</title>
                 <rect width="100%" height="100%" fill="white" />
                 <a href="/">
@@ -234,7 +259,8 @@
               </svg>
               <div class="card-body">
                 <p>Elib</p>
-                <p class="card-text">A library application to make it easy for people to donate physical books for rural community libraries.</p>
+                <p class="card-text">A library application to make it easy for people to donate physical books for rural
+                  community libraries.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="/"><button type="button" class="btn btn-sm btn-outline-secondary">View Project</button></a>
@@ -245,7 +271,8 @@
           </div>
           <div id="lnet" class="col">
             <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img"
+                aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>LNet</title>
                 <rect width="100%" height="100%" fill="white" />
                 <a href="/">
@@ -254,7 +281,8 @@
               </svg>
               <div class="card-body">
                 <p>LNet</p>
-                <p class="card-text">A learning portal designed for organisations to train employees whiles tracking their progress.</p>
+                <p class="card-text">A learning portal designed for organisations to train employees whiles tracking
+                  their progress.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="/"><button type="button" class="btn btn-sm btn-outline-secondary">View Project</button></a>
@@ -277,19 +305,24 @@
             </div>
           </div>
           <div class="column">
-            <div class="icon-text1 d-flex justify-content-start align-items-center" style="color: #0779e4;font-weight: bold">
+            <div class="icon-text1 d-flex justify-content-start align-items-center"
+              style="color: #0779e4;font-weight: bold">
               <img class="app-icon rounded" src="/images/wnp-circle.png" alt="">Work&Pay App
             </div>
-            <div class="icon-text1 d-flex justify-content-end align-items-center" style="color: #ff577f;font-weight: bold">
+            <div class="icon-text1 d-flex justify-content-end align-items-center"
+              style="color: #ff577f;font-weight: bold">
               <img class="app-icon rounded" src="/images/bookme-circle.png" alt="">BookMe App
             </div>
-            <div class="icon-text2 d-flex justify-content-start align-items-center" style="color: #cad315;font-weight: bold">
+            <div class="icon-text2 d-flex justify-content-start align-items-center"
+              style="color: #cad315;font-weight: bold">
               <img class="app-icon rounded" src="/images/kardio-circle.png" alt="">Kardiocare App
             </div>
-            <div class="icon-text1 d-flex justify-content-end align-items-center" style="color: #32e0c4;font-weight: bold">
+            <div class="icon-text1 d-flex justify-content-end align-items-center"
+              style="color: #32e0c4;font-weight: bold">
               <img class="app-icon rounded" src="/images/elibb-circle.png" alt="">Elib App
             </div>
-            <div class="icon-text1 d-flex justify-content-start align-items-center" style="color: #be79df;font-weight: bold">
+            <div class="icon-text1 d-flex justify-content-start align-items-center"
+              style="color: #be79df;font-weight: bold">
               <img class="app-icon rounded" src="/images/lnet-circle.png" alt="">LNet App
             </div>
             <div class="icon-text2 d-flex justify-content-around">
@@ -304,10 +337,11 @@
     <div class="container">
       <div class="row">
         <div class="">
-          <div class="ftext">Freelance ! rope me in. I like to learn something new!</div>
+          <div class="ftext">Freelancing? Count me in! I love to learn new thing.</div>
         </div>
         <div class="d-flex justify-content-center">
-          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
+          <div class="ltext text-center">Lets make history and break boundries. Send me a message and <span><a
+                href="mailto:works@princesegbefia.com" class="lspan">let's chat</a></span></div>
         </div>
       </div>
       <div class="row">
@@ -318,16 +352,20 @@
           <a class="Nphone" href="tel:9294233552"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
         <div class="col-md-5 mail">
-          <a class="Nvlope" href="mailto:works@princesegbefia.com"><i class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
+          <a class="Nvlope" href="mailto:works@princesegbefia.com"><i
+              class="fa fa-envelope fa-lg"></i>works@princesegbefia.com</a>
         </div>
       </div>
     </div>
   </footer>
 
   <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+    integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 </body>
