--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     <div class="container">
       <div class="row">
         <div class="">
-          <div class="ftext">Freelancing? Count me in! I love to learn new thing.</div>
+          <div class="ftext">Freelancing? Count me in! I love to learn new things.</div>
         </div>
         <div class="d-flex justify-content-center">
           <div class="ltext text-center">Lets make history and break boundries. Send me a message and <span><a
